# hldiscord_rpc

./: .gitignore  Build.xml  CMakeLists.txt  README.md  discord_rpc.cpp  hxformat.json  sample.hxml  test.hxml
discord/: Activity.hx  Event.hx  Rpc.hx  User.hx
discord/_internal/: CallbacksDaemon.hx
discord_rpc/: Discord.hx
sample/: Sample.hx
test/: Test.hx
